// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button default.js 1`] = `
<Component>
  <Button
    className="ui compact button"
    isDisabled={false}
    isLoading={false}
    onClick={[Function]}
    title="Submit"
  >
    <button
      className="ui compact button"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "position": "relative",
        }
      }
    >
      Submit
    </button>
  </Button>
</Component>
`;

exports[`button disabled.js 1`] = `
<Component>
  <Button
    className="ui compact button"
    isDisabled={true}
    isLoading={false}
    onClick={[Function]}
    title="Submit"
  >
    <button
      className="ui compact button"
      disabled={true}
      onClick={[Function]}
      style={
        Object {
          "position": "relative",
        }
      }
    >
      Submit
    </button>
  </Button>
</Component>
`;

exports[`button various_class_names.js 1`] = `
<Component>
  <div>
    <Button
      className="ui compact button"
      isDisabled={false}
      isLoading={false}
      onClick={[Function]}
      title="Default"
    >
      <button
        className="ui compact button"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "position": "relative",
          }
        }
      >
        Default
      </button>
    </Button>
    <Button
      className="ui primary compact button"
      isDisabled={false}
      isLoading={false}
      onClick={[Function]}
      title="Primary"
    >
      <button
        className="ui primary compact button"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "position": "relative",
          }
        }
      >
        Primary
      </button>
    </Button>
    <Button
      className="ui secondary compact button"
      isDisabled={false}
      isLoading={false}
      onClick={[Function]}
      title="Secondary"
    >
      <button
        className="ui secondary compact button"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "position": "relative",
          }
        }
      >
        Secondary
      </button>
    </Button>
    <Button
      className="ui green compact button"
      isDisabled={false}
      isLoading={false}
      onClick={[Function]}
      title="Green"
    >
      <button
        className="ui green compact button"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "position": "relative",
          }
        }
      >
        Green
      </button>
    </Button>
    <Button
      className="ui red compact button"
      isDisabled={false}
      isLoading={false}
      onClick={[Function]}
      title="Red"
    >
      <button
        className="ui red compact button"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "position": "relative",
          }
        }
      >
        Red
      </button>
    </Button>
  </div>
</Component>
`;

exports[`button with_loading_state.js 1`] = `
<Component>
  <Button
    className="ui compact button"
    isDisabled={false}
    isLoading={true}
    onClick={[Function]}
    title="Submit"
  >
    <button
      className="ui compact button"
      disabled={true}
      onClick={[Function]}
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        className="ui mini active inline loader loader"
      />
      Submit
    </button>
  </Button>
</Component>
`;

exports[`button with_onClick_callback.js 1`] = `
<Component>
  <Button
    className="ui compact button"
    isDisabled={false}
    isLoading={false}
    onClick={[Function]}
    title="Click me"
  >
    <button
      className="ui compact button"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "position": "relative",
        }
      }
    >
      Click me
    </button>
  </Button>
</Component>
`;
